env/code_53e4ec34447de/stderr.txt
  File "main.py", line 1
    int main() {
           ^
SyntaxError: invalid syntax
